sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:4: error: not found: value getNombreValeur
  for (i <- 1 to getNombreValeur()-1){
                 ^AlgBubbleSort1:5: error: not found: value j
    j=i+1
    ^AlgBubbleSort1:6: error: not found: value j
    if (!plusPetit(i,j)){
                     ^AlgBubbleSort1:7: error: not found: value j
      echange(i,j)
                ^